@@ -1,0 +1,47 @@
+#include <testfwk.h>
+
+#define UCHAR	unsigned char
+#define USHORT	unsigned short
+
+#define PCHAR	unsigned char *
+
+UCHAR mod_16x8(USHORT s16, UCHAR i8)
+{
+	return (0);
+}
+
+UCHAR state[256];
+UCHAR x, y;
+
+void swap(PCHAR pa, PCHAR pb)
+{
+}
+
+void RC4Init(PCHAR pKey, UCHAR iKeyLen)
+{
+	UCHAR i;
+
+	i = 0;
+	do
+	{
+		state[i] = i;
+		i ++;
+	} while (i);
+
+	x = 0;
+	do
+	{
+		x = x + state[i] + pKey[mod_16x8(i, iKeyLen)];
+		swap(&state[i], &state[x]);
+		i ++;
+	} while(i);
+	x = 0;
+	y = 0;
+}
+
+void
+testBug(void)
+{
+        ASSERT(1);
+}
+
