@@ -1,5 +1,11 @@
 2010-11-28 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/peeph-z80.def,
+	  support/regression/tests/bug-3117729.c:
+	  Fixed #3117729, minor peephole improvements.
+
+2010-11-28 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCpeeph.c,
 	  src/z80/peep.c:
 	  Fixed #3117748, improved fix for #3109557.
